--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,68 @@
 {
+    "name": "wsc2024/chatbot-workshop",
     "type": "project",
-    "license": "proprietary",
-    "minimum-stability": "stable",
-    "prefer-stable": true,
+    "description": "Simple Symfony App providing a GPT Chat UI",
+    "license": "MIT",
     "require": {
-        "php": ">=8.2",
+        "php": ">=8.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/console": "7.0.*",
-        "symfony/dotenv": "7.0.*",
-        "symfony/flex": "^2",
-        "symfony/framework-bundle": "7.0.*",
-        "symfony/runtime": "7.0.*",
-        "symfony/yaml": "7.0.*"
+        "codewithkyrian/chromadb-php": "^0.3.0",
+        "league/commonmark": "^2.4",
+        "php-llm/llm-chain": "@dev",
+        "php-llm/llm-chain-bundle": "@dev",
+        "phpdocumentor/reflection-docblock": "^5.4",
+        "phpstan/phpdoc-parser": "^1.29",
+        "probots-io/pinecone-php": "^1.0",
+        "symfony/asset": "7.1.*",
+        "symfony/asset-mapper": "7.1.*",
+        "symfony/clock": "7.1.*",
+        "symfony/console": "7.1.*",
+        "symfony/css-selector": "7.1.*",
+        "symfony/dom-crawler": "7.1.*",
+        "symfony/dotenv": "7.1.*",
+        "symfony/flex": "^2.4",
+        "symfony/framework-bundle": "7.1.*",
+        "symfony/http-client": "7.1.*",
+        "symfony/monolog-bundle": "^3.10",
+        "symfony/property-access": "7.1.*",
+        "symfony/property-info": "7.1.*",
+        "symfony/runtime": "7.1.*",
+        "symfony/serializer": "7.1.*",
+        "symfony/twig-bundle": "7.1.*",
+        "symfony/uid": "7.1.*",
+        "symfony/ux-icons": "^2.18",
+        "symfony/ux-live-component": "^2.18",
+        "symfony/ux-turbo": "^2.18",
+        "symfony/yaml": "7.1.*",
+        "twig/extra-bundle": "^3.10",
+        "twig/markdown-extra": "^3.10",
+        "twig/twig": "^3.10"
+    },
+    "replace": {
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-mbstring": "*",
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*",
+        "symfony/polyfill-php82": "*",
+        "symfony/polyfill-php83": "*"
+    },
+    "conflict": {
+        "symfony/symfony": "*"
     },
     "require-dev": {
+        "nyholm/nsa": "^1.3",
+        "php-cs-fixer/shim": "^3.59",
+        "phpstan/phpstan": "^1.11",
+        "phpunit/phpunit": "^11.2",
+        "symfony/browser-kit": "7.1.*",
+        "symfony/debug-bundle": "7.1.*",
+        "symfony/stopwatch": "7.1.*",
+        "symfony/web-profiler-bundle": "7.1.*"
     },
     "config": {
         "allow-plugins": {
@@ -23,6 +71,12 @@
             "symfony/runtime": true
         },
         "sort-packages": true
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "7.1.*"
+        }
     },
     "autoload": {
         "psr-4": {
@@ -34,35 +88,19 @@
             "App\\Tests\\": "tests/"
         }
     },
-    "replace": {
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php72": "*",
-        "symfony/polyfill-php73": "*",
-        "symfony/polyfill-php74": "*",
-        "symfony/polyfill-php80": "*",
-        "symfony/polyfill-php81": "*",
-        "symfony/polyfill-php82": "*"
-    },
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        },
         "post-install-cmd": [
             "@auto-scripts"
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
-    },
-    "conflict": {
-        "symfony/symfony": "*"
-    },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "7.0.*"
+        ],
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "importmap:install": "symfony-cmd"
         }
     }
 }
