--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,7 +13,7 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
             string $openAiApiKey: '%env(OPENAI_API_KEY)%'
-            #string $programFile: '%kernel.project_dir%/wsc-program.txt'
+            string $programFile: '%kernel.project_dir%/wsc-program.txt'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
